2000-04-20  Dave Love  <fx@gnu.org>

	* acspecific.m4 (AC_FUNC_MKTIME): Use AC_SUBST.

2000-04-12  Akim Demaille  <akim@epita.fr>

	Provide a fine grained control over autoconf's warnings.

	* acgeneral.m4 (AC_WARNING_IFELSE, _AC_DIAGNOSE, AC_DIAGNOSE):
	New macros.
	(AC_DEFUN_ONCE, AC_OBSOLETE, AC_BEFORE, AU_DEFUN, AC_PREREQ,
	AC_WARNING, AC_FATAL, AC_TRY_RUN): Use AC_DIAGNOSE.
	* autoconf.sh: Provide support for `--warnings', `-W'.
	* doc/autoconf.texi (Invoking autoconf): Adjust.
	(Reporting Messages): New section.

2000-04-12  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (_AC_INIT_HELP): Move --srcdir in the first
	section.
	Document --help=short and recursive.
	Split the `Directory' section into `Installation directories' for
	--prefix and --exec-prefix, and all the others into `Fine tuning
	of the installation directories'.
	In the latter, don't repeat `in DIR', the user understands, and it
	comes out better.
	Default for --exec-prefix is PREFIX.
	Reported by Kathryn Hargreaves.
	Move --host before --build.
	Fix a test on `$ac_init_help' which was not updated.

2000-04-11  Akim Demaille  <akim@epita.fr>

	Have `make check' succeed with CC=g++.

	* tests/atspecific.m4 (AT_TEST_MACRO): Don't check `env-after' if
	the file does not exist, which may happen when a `configure' exits
	brutally.
	* tests/semantics.m4 (AC_CHECK_MEMBERS, AC_CHECK_TYPES): ANSI C++
	forbids members named like their hosting struct, so don't do it.

2000-04-11  Akim Demaille  <akim@epita.fr>

	* autoscan.pl: Reindent using 2 spaces, not 4.
	Use `#' to denote Autoconf comments, not `dnl'.
	Put a few `\' here and there to avoid misfontification and
	misindentation.
	Use your base name when reporting errors.
	(parse_args::usage): Use $0, use the same order as the other
	executables.
	(parse_args): Don't dump `--help' on cmd line errors.

2000-04-11  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (AC_PROVIDE_IF): Rename as...
	(AC_PROVIDE_IFELSE): this.  Change all callers.